--- a/index.html
+++ b/index.html
@@ -1,80 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Coding Basics</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
 
-      body {
-        font-family: sans-serif;
-        margin-left: 30px;
-        margin-right: 30px;
-      }
+<head>
+  <title>Coding Basics</title>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-      #header {
-        text-align: center;
-      }
+    body {
+      font-family: sans-serif;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
 
-      #container {
-        background-color: pink;
-        margin: 40px auto;
-        max-width: 800px;
-        padding: 38px 31px;
-      }
+    #header {
+      text-align: center;
+    }
 
-      input {
-        font-size: 21px;
-        line-height: 33px;
-        margin: 0 0 23px 0;
-        padding: 0 9px;
-        width: 100%;
-      }
+    #container {
+      background-color: pink;
+      margin: 40px auto;
+      max-width: 800px;
+      padding: 38px 31px;
+    }
 
-      button {
-        font-size: 21px;
-        line-height: 33px;
-        margin: 0 0 23px 0;
-        padding: 0 6px;
-      }
+    input {
+      font-size: 21px;
+      line-height: 33px;
+      margin: 0 0 23px 0;
+      padding: 0 9px;
+      width: 100%;
+    }
 
-      #output-div {
-        background-color: lightgrey;
-        margin: 20px auto;
-        padding: 20px;
-        width: 100%;
-      }
-    </style>
-  </head>
+    button {
+      font-size: 21px;
+      line-height: 33px;
+      margin: 0 0 23px 0;
+      padding: 0 6px;
+    }
 
-  <body>
-    <h1 id="header">Basics: Beat That! 🚀</h1>
-    <div id="container">
-      <p>Input:</p>
-      <input id="input-field" />
-      <br />
-      <button id="submit-button">Submit</button>
-      <p>Output:</p>
-      <div id="output-div"></div>
+    #output-div {
+      background-color: lightgrey;
+      margin: 20px auto;
+      padding: 20px;
+      width: 100%;
+    }
+
+    #container {
+      background: lightpink;
+      margin: 40px auto;
+      padding: 40px 30px;
+      max-width: 800 px;
+    }
+  </style>
+</head>
+
+<body>
+  <h1 id="header">Can You Beat That Yo ? 🚀</h1>
+  <div id="container">
+    <h2>Hello! Welcome to Beat That! Click submit to start the game now!</h2>
+    <p>Create a two digit number by selecting order of dice rolls</p>
+    <p>The player with highest number wins! All the Best!</p>
+    <p>Input:</p>
+    <input id="input-field" />
+    <br />
+    <button id="submit-button">Submit</button>
+    <p>Output:</p>
+    <div id="output-div">
     </div>
-    <!-- Import program logic -->
-    <script src="script.js"></script>
-    <!-- Define button click functionality -->
-    <script>
-      var button = document.querySelector("#submit-button");
-      button.addEventListener("click", function () {
-        // Set result to input value
-        var input = document.querySelector("#input-field");
-        var result = main(input.value);
+  </div>
+  <!-- Import program logic -->
+  <script src="scriptsol.js"></script>
+  <!-- Define button click functionality -->
+  <script>
+    var button = document.querySelector("#submit-button");
+    button.addEventListener("click", function () {
+      // Set result to input value
+      var input = document.querySelector("#input-field");
+      var result = main(input.value);
 
-        // Display result in output element
-        var output = document.querySelector("#output-div");
-        output.innerHTML = result;
+      // Display result in output element
+      var output = document.querySelector("#output-div");
+      output.innerHTML = result;
 
-        // Reset input value
-        input.value = "";
-      });
-    </script>
-  </body>
+      // Reset input value
+      input.value = "";
+    });
+  </script>
+</body>
+
 </html>
